# github-mkdocs-test

./: 404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
search/: search_index.js  search_index.json
stylesheets/: extra.css
