[project]
name = "github-docs"
version = "0.1.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
mkdocs = "^1.6.1"
mkdocs-shadcn = "^0.8.0"
pymdown-extensions = "^10.16"
mkdocs-material = "^9.6.15"
mkdocs-mermaid2-plugin = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
